# flappy_bird

./: .gitignore  AssetManager.cpp  AssetManager.hpp  Bird.cpp  Bird.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  LICENSE  Pipe.cpp  Pipe.hpp  README.md  State.hpp  highscore.txt  main.cpp
